--- a/pipelines/dacpac-ci.yaml
+++ b/pipelines/dacpac-ci.yaml
@@ -50,5 +50,6 @@ jobs:
             echo $WORKINGDIR
             [[ -f /opt/sqlpackage/sqlpackage ]] && echo "sqlpackage exists!"
             [[ -f $WORKINGDIR/drop/test.dacpac ]] && echo "dacpac exists!"
+            ( /opt/mssql/bin/sqlservr & ) | grep -q "Service Broker manager has started" \
             /opt/sqlpackage/sqlpackage /a:Publish /tsn:. /tdn:test /tu:sa /tp:HJkds*(pvdhsiuh289pV /sf:$WORKINGDIR/test.dacpac
     
