--- a/pipelines/dacpac-aci-ci.yaml
+++ b/pipelines/dacpac-aci-ci.yaml
@@ -35,8 +35,9 @@ jobs:
       - task: SqlAzureDacpacDeployment@1
         displayName: Execute Azure SQL DacpacTask
         inputs:
-          ServerName: 'pws-aci-sqldevops.australiaeast.azurecontainer.io'
-          DatabaseName: 'test'
-          SqlUsername: 'sa'
-          SqlPassword: 'HJkds*(pvdhsiuh289pV'
-          DacpacFile: '$(Pipeline.Workspace)/drop/test.dacpac'
+          authenticationType: server
+          serverName: 'pws-aci-sqldevops.australiaeast.azurecontainer.io'
+          databaseName: 'test'
+          sqlUsername: 'sa'
+          sqlPassword: 'HJkds*(pvdhsiuh289pV'
+          dacpacFile: '$(Pipeline.Workspace)/drop/test.dacpac'
