--- a/pipelines/dacpac-aci-ci.yaml
+++ b/pipelines/dacpac-aci-ci.yaml
@@ -36,9 +36,9 @@ jobs:
         displayName: Install SqlPackage
         inputs:
           targetType: 'filePath'
-          filePath: '$(System.DefaultWorkingDirectory)/pipelines/Get-SqlPackge.ps1'
+          filePath: '$(System.DefaultWorkingDirectory)\pipelines\Get-SqlPackge.ps1'
       - task: PowerShell@2
         inputs:
           targetType: 'filePath'
           arguments: -sqlUserName sa -sqlUserPassword "HJkds*(pvdhsiuh289pV" -sqlServerName pws-aci-sqldevops.australiaeast.azurecontainer.io -databaseName test -dacpacPath $(Pipeline.Workspace)\drop\test.dacpac
-          filePath: '$(System.DefaultWorkingDirectory)/pipelines/Get-SqlPackge.ps1'
+          filePath: '$(System.DefaultWorkingDirectory)\pipelines\Publish-Dacpac.ps1'
