--- a/pipelines/dacpac-aci-ci.yaml
+++ b/pipelines/dacpac-aci-ci.yaml
@@ -32,7 +32,7 @@ jobs:
         displayName: Install SqlPackage
         inputs:
           targetType: 'filePath'
-          filePath: '$(System.DefaultWorkingDirectory)\pipelines\Get-SqlPackge.ps1'
+          filePath: '$(System.DefaultWorkingDirectory)\pipelines\Get-SqlPackage.ps1'
       - task: PowerShell@2
         inputs:
           targetType: 'filePath'
