--- a/pipelines/dacpac-aci-ci.yaml
+++ b/pipelines/dacpac-aci-ci.yaml
@@ -34,6 +34,7 @@ jobs:
           targetType: 'filePath'
           filePath: '$(System.DefaultWorkingDirectory)\pipelines\Get-SqlPackage.ps1'
       - task: PowerShell@2
+        displayName: Deploy Dacpac
         inputs:
           targetType: 'filePath'
           arguments: -sqlUserName sa -sqlUserPassword "HJkds*(pvdhsiuh289pV" -sqlServerName pws-aci-sqldevops.australiaeast.azurecontainer.io -databaseName test -dacpacPath $(System.DefaultWorkingDirectory)\test.dacpac
