--- a/pipelines/dacpac-aci-ci.yaml
+++ b/pipelines/dacpac-aci-ci.yaml
@@ -32,6 +32,7 @@ jobs:
         displayName: Install SqlPackage
         inputs:
           targetType: 'filePath'
+          arguments: -sqlPackageZip '$(System.DefaultWorkingDirectory)\pipelines\sqlpackage.zip' 
           filePath: '$(System.DefaultWorkingDirectory)\pipelines\Get-SqlPackage.ps1'
       - task: PowerShell@2
         displayName: Deploy Dacpac
